# purple-matrix-rust

./: .gitignore  100_PERCENT_PLAN.md  Cargo.toml  DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  MSC_COMPLIANCE.md  Makefile  NEWS  PRODUCTION_FIX_PLAN.md  README.md  SDK_COVERAGE_REPORT.md  SECURITY_REMEDIATION_PLAN.md  SUMMARY.md  TESTING.md  calculate_coverage.py  compile_flags.txt  fix_enums.py  fix_roomlist.py  generate_icons.py  install_icons.sh  libtest_type.rlib  plugin.c  run_tests  run_unit_tests  test_type.rs  update_system.sh
.github/workflows/: ci.yml
pidgin-matrix-ui/: Makefile  pidgin_matrix_ui.c
plugin_src/: matrix_account.c  matrix_account.h  matrix_blist.c  matrix_blist.h  matrix_chat.c  matrix_chat.h  matrix_commands.c  matrix_commands.h  matrix_core.c  matrix_ffi_wrappers.h  matrix_globals.h  matrix_types.h  matrix_utils.c  matrix_utils.h
src/: auth.rs  ffi.rs  grouping.rs  html_fmt.rs  lib.rs  media_helper.rs  sync_logic.rs  verification_logic.rs
src/ffi/: aliases.rs  auth.rs  discovery.rs  encryption.rs  events.rs  free_event.rs  messages.rs  mod.rs  polls.rs  rooms.rs  stickers.rs  tests.rs  threads.rs  ui.rs  users.rs
src/handlers/: account_data.rs  commands.rs  crypto.rs  messages.rs  mod.rs  polls.rs  presence.rs  reactions.rs  receipts.rs  room_state.rs  stickers.rs  typing.rs
tests/: run_unit_tests  test_html_security.rs  test_logic.c  test_render.rs  unit_tests.c
