[package]
name = "purple_matrix_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
matrix-sdk = { version = "0.16.0", default-features = false, features = ["markdown", "native-tls", "sqlite", "e2e-encryption", "automatic-room-key-forwarding", "sso-login", "qrcode"] }
matrix-sdk-base = "0.16.0"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
once_cell = "1.18"
simple_logger = "4.0"
log = "0.4"
url = "2.4"
anyhow = "1.0"
pulldown-cmark = "0.9"
mime_guess = "2.0"
futures-util = "0.3"
tiny_http = "0.12.0"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.12"
image = "0.23"

[profile.dev]
opt-level = 0
debug = true  # Keep debug info for debugging
codegen-units = 256
incremental = true

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"

